# STROKE_PREDICTION

./: .gitignore  README.md  main.py  pyproject.toml  pyproject.txt
src/: main.ipynb  main.py  main_optuna.py  visualyze.py
src/DataProcesser/: data.py  datamodule.py  dataset.py  graph.py  result_processer.py  utils.py
src/Models/: __init__.py  abc.py  error_model.py  interface.py  kan.py  mlp.py  model.py  model_factory.py  optimizer.py  rand_forest.py  utils.py  xgboost.py
src/etl/: datamodule.py  dataset.py
src/pipelines/: result_processer.py
src/view/: dashboard.py  final.py  graph.py
