[project]
name = "projeto-kaggle"
version = "0.0.1"
description = "Projetinho massa de previsão de dados no Kaggle"
authors = ["Luis Felipe Araujo de Oliveira <luisfelipearaujo503@gmail.com>"]
requires-python = ">=3.11,<=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "kagglehub>=0.3.13",
    "torch>=2.7.0",
    # "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
# torchvision = [
#   { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
#   { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
# ]

# index CPU
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# INDEX GPU
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
