[project]
name = "projeto-kaggle"
version = "0.0.1"
description = "Projetinho massa de previsão de dados no Kaggle"
authors = [
  { name = "Luis Felipe Araujo de Oliveira", email = "luisfelipearaujo503@gmail.com" }
]
requires-python = ">=3.11,<=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "kagglehub>=0.3.13",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "scikit-learn>=1.7.2",
    "pandera[pandas]>=0.27.0",
    "scipy>=1.16.3",
    "lightning<2.6.0",
    "tensorboard>=2.20.0",
    "mlflow>=3.7.0",
    "optuna>=4.6.0",
]

[tool.uv.sources]
# Instala versao com CUDA apenas em ambientes Linux (pensando no Kaggle)
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

# index CPU
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# INDEX GPU
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
